tests/codegen/fail/input_object/derive_wrong_item.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
union Test { id: i32 }

fn main() {}
